--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-actions-sheet": "^0.8.7",
     "react-native-animatable": "^1.3.3",
     "react-native-autoscroll-flatlist": "^1.11.2",
+    "react-native-date-picker": "^4.2.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.4.0",
     "react-native-image-crop-picker": "^0.38.0",
