--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.17.4",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.10",
@@ -23,6 +24,7 @@
     "react-native-actions-sheet": "^0.8.7",
     "react-native-animatable": "^1.3.3",
     "react-native-autoscroll-flatlist": "^1.11.2",
+    "react-native-calendars": "^1.1289.0",
     "react-native-date-picker": "^4.2.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.4.0",
