--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'Buildlink' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'react-native-date-picker', :path => '../node_modules/react-native-date-picker'
+
   target 'BuildlinkTests' do
     inherit! :complete
     # Pods for testing
