--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.15.0",
     "react-native-simple-toast": "^1.1.4",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-spinkit": "^1.5.1",
     "react-native-svg": "^13.2.0",
     "react-native-swiper-flatlist": "^3.0.17",
