--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-autoscroll-flatlist": "^1.11.2",
     "react-native-calendars": "^1.1289.0",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^4.2.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.4.0",
