--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
@@ -41,8 +42,11 @@
     "react-native-simple-toast": "^1.1.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-spinkit": "^1.5.1",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-star-rating-widget": "^1.3.0",
     "react-native-svg": "^13.2.0",
     "react-native-swiper-flatlist": "^3.0.17",
+    "react-native-tab-view": "^3.3.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
